change find all filter for user and seller
